linuxmuster-linbo-gui7 (7.0.1-rc01) lmn7-testing; urgency=low

  * Implemented "AutoPartition" and "AutoInitcache" functionality (#56)
  * Improoved keyboard only usage (#59)
  * Error logs are now fully displayed in a scrollable container (#55)
  * Console processes are killed when the console window is closed (#57)
  * Add start.conf option "ClientDetailsVisibleByDefault" to make the details visible by default (#54)
  * Don't hide the client details when some task (eg. upload image) starts (#54)
  * Fix registering clients (#53)

 -- Dorian Zedler <dorian@itsblue.de>  Fri, 23 Mar 2021 13:30:00 +0100 

linuxmuster-linbo-gui7 (7.0.0) lmn7; urgency=low

  * Initial release to stable repo
  
 -- Dorian Zedler <dorian@itsblue.de>  Tue, 3 Mar 2021 10:13:00 +0100

linuxmuster-linbo-gui7 (7.0.0-rc06) lmn7-testing; urgency=low

  * Fix critical Error that lead to the GUI crashing in many scenarios (#51)
  
 -- Dorian Zedler <dorian@itsblue.de>  Tue, 3 Mar 2021 10:13:00 +0100

linuxmuster-linbo-gui7 (7.0.0-rc05) lmn7-testing; urgency=low

  * Update dependencies (#50)
  * Fixed an Error that made the gui crash on unregistered clients (#49)
  * Fixed graphical bugs in legacy layout (#48)
  * Fixed graphical issues with the not registered text (#47)
  * The image name field in the image creation dialog is now disabled when replacing an existing image (#46)

 -- Dorian Zedler <dorian@itsblue.de>  Sun, 1 Mar 2021 15:11:00 +0100

linuxmuster-linbo-gui7 (7.0.0-rc04) lmn7-testing; urgency=low

  * Added tooltips to all buttons and made them look better
  * Some improovements to terminal (#45)

 -- Dorian Zedler <dorian@itsblue.de>  Sun, 7 Feb 2021 08:30:00 +0100

linuxmuster-linbo-gui7 (7.0.0-rc03) lmn7-testing; urgency=low

  * Added tooltips to startaction buttons (#42)
  * Disable gui when in remote mode (#43)
  * Add a tiny hint "F1" to remind people to press F1 to show client details (#44)

 -- Dorian Zedler <dorian@itsblue.de>  Fri, 5 Feb 2021 19:01:00 +0100
